--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title>準備中</title>
+  <link rel="icon" href="kann favicon.png" type="image/png"> <!-- ←追加する行 -->
   <style>
     body {
       font-family: sans-serif;
@@ -13,8 +12,3 @@
     }
   </style>
 </head>
-<body>
-  <h1>🎉 サイト準備中 🎉</h1>
-  <p>11月19日 公開予定です。どうぞお楽しみに！</p>
-</body>
-</html>
