--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>準備中</title>
-  <link rel="icon" href="kann favicon.png" type="image/png"> <!-- ←追加する行 -->
+  <link rel="icon" href="kann favicon.png" type="image/png">
   <style>
     body {
       font-family: sans-serif;
