--- a/preview/index.html
+++ b/preview/index.html
@@ -2,10 +2,44 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>本番テストページ</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>準備中</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f8f8;
+      color: #555;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    h1 {
+      font-size: 6vw; /* スマホでも大きめに見えるように */
+      margin-bottom: 1em;
+    }
+
+    p {
+      font-size: 4.5vw;
+    }
+
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 2.5em;
+      }
+      p {
+        font-size: 1.5em;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h1>🎉 本番ページ（テスト中） 🎉</h1>
-  <p>このページは preview 確認用です。</p>
+  <h1>🎉 サイト準備中 🎉</h1>
+  <p>11月15日 公開予定です。どうぞお楽しみに！</p>
 </body>
 </html>
