--- a/preview/index.html
+++ b/preview/index.html
@@ -20,7 +20,7 @@
     }
 
     h1 {
-      font-size: 6vw; /* スマホでも大きめに見えるように */
+      font-size: 6vw; 
       margin-bottom: 1em;
     }
 
@@ -40,6 +40,6 @@
 </head>
 <body>
   <h1>🎉 サイト準備中 🎉</h1>
-  <p>11月15日 公開予定です。どうぞお楽しみに！</p>
+  <p>11月19日 公開予定です。どうぞお楽しみに！</p>
 </body>
 </html>
