--- a/preview/index.html
+++ b/preview/index.html
@@ -41,5 +41,7 @@
 <body>
   <h1>🎉 サイト準備中 🎉</h1>
   <p>11月19日 公開予定です。どうぞお楽しみに！</p>
+
+  <p><a href="preview/message.html">📨 メッセージ一覧を見る</a></p>
 </body>
 </html>
