--- a/preview/index.html
+++ b/preview/index.html
@@ -42,6 +42,6 @@
   <h1>🎉 サイト準備中 🎉</h1>
   <p>11月19日 公開予定です。どうぞお楽しみに！</p>
 
-  <p><a href="message.html">📨 メッセージ一覧を見る</a></p>
+  <p><a href="pages/message.html">📨 メッセージ一覧を見る</a></p>
 </body>
 </html>
