--- a/preview/index.html
+++ b/preview/index.html
@@ -54,7 +54,7 @@
 <!-- メニュー本体 -->
 <div id="myMenu" class="side-menu">
   <a href="index.html">🏠 ホーム</a>
-  <a href="preview/pages/message.html">📨 メッセージ</a>
+  <a href="pages/message.html">📨 メッセージ</a>
   <!-- 他のページも追加可能 -->
 </div>
 
