--- a/preview/index.html
+++ b/preview/index.html
@@ -2,99 +2,46 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>Kannkannkikaku</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="kann_favicon.png">
+  <title>準備中</title>
+  <!-- ファビコン設定 -->
+  <link rel="icon" type="image/png" href="preview/images/kann-favicon.png">
   <style>
     body {
-      margin: 0;
       font-family: sans-serif;
-      background-color: #f8f8f8;
-      color: #333;
-    }
-
-    /* ハンバーガーボタン */
-    .menu-btn {
-      font-size: 30px;
-      padding: 15px;
-      cursor: pointer;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 1001;
-      background-color: transparent;
-      border: none;
-      color: #333;
-    }
-
-    /* スライドメニュー本体 */
-    .side-menu {
-      height: 100%;
-      width: 250px;
-      position: fixed;
-      top: 0;
-      left: -250px;
-      background-color: #444;
-      overflow-x: hidden;
-      transition: 0.3s;
-      padding-top: 60px;
-      z-index: 1000;
-    }
-
-    .side-menu a {
-      padding: 12px 20px;
-      text-decoration: none;
-      font-size: 18px;
-      color: #fff;
-      display: block;
-      transition: 0.2s;
-    }
-
-    .side-menu a:hover {
-      background-color: #666;
-    }
-
-    /* 中央コンテンツ */
-    .main-content {
       text-align: center;
-      padding-top: 100px;
+      background-color: #f8f8f8;
+      color: #555;
+      margin: 0;
+      padding: 0;
     }
 
-    .main-image {
-      max-width: 80%;
+    .container {
+      padding: 40px 20px;
+    }
+
+    img.main-image {
+      max-width: 100%;
       height: auto;
+      margin-top: 20px;
+    }
+
+    h1 {
+      font-size: 2rem;
+      margin-top: 40px;
+    }
+
+    p {
+      font-size: 1.2rem;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-
-<!-- ☰ ボタン -->
-<button class="menu-btn" onclick="toggleMenu()">☰</button>
-
-<!-- スライドメニュー -->
-<div id="myMenu" class="side-menu">
-  <a href="index.html">🏠 ホーム</a>
-  <a href="pages/message.html">📨 メッセージ</a>
-  <!-- 他のリンクも追加できます -->
-</div>
-
-<!-- メインコンテンツ -->
-<div class="main-content">
-  <img src="main_image.png" alt="メインイラスト" class="main-image">
-  <p>11月19日 公開予定です。どうぞお楽しみに！</p>
-</div>
-
-<!-- メニュー開閉スクリプト -->
-<script>
-  function toggleMenu() {
-    const menu = document.getElementById("myMenu");
-    if (menu.style.left === "0px") {
-      menu.style.left = "-250px";
-    } else {
-      menu.style.left = "0px";
-    }
-  }
-</script>
-
+  <div class="container">
+    <h1>🎉 サイト準備中 🎉</h1>
+    <!-- メイン画像 -->
+    <img src="preview/images/test-main.png" alt="メイン画像" class="main-image">
+    <p>11月19日 公開予定です。どうぞお楽しみに！</p>
+  </div>
 </body>
 </html>
