--- a/preview/index.html
+++ b/preview/index.html
@@ -5,7 +5,7 @@
   <title>準備中</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- ファビコン（スペースなしで保存したものに変更） -->
-  <link rel="icon" type="image/png" href="preview/images/kann-favicon.png">
+  <link rel="icon" type="image/png" href="images/kann-favicon.png">
   <style>
     body {
       font-family: sans-serif;
@@ -97,7 +97,7 @@
   </nav>
 
   <div class="container">
-    <img src="preview/images/test-main.png" alt="メイン画像" class="main-image">
+    <img src="images/test-main.png" alt="メイン画像" class="main-image">
     <div class="main-text">
       <h2>🎉 サイト準備中 🎉</h2>
       <p>11月19日 公開予定です。どうぞお楽しみに！</p>
