--- a/preview/index.html
+++ b/preview/index.html
@@ -93,7 +93,7 @@
   </div>
 
   <nav id="menu" class="side-menu">
-    <a href="message.html">📨 メッセージ一覧</a>
+    <a href="preview/message.html">📨 メッセージ一覧</a>
   </nav>
 
   <div class="container">
