--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   </div>
 
   <nav id="menu" class="side-menu">
-    <a href="message"><img src="images/message.png" alt="メッセージ">メッセージ</a>
+    <a href="message.html"><img src="images/message.png" alt="メッセージ">メッセージ</a>
     <a href="#"><img src="images/photo.png" alt="写真">写真</a>
     <a href="#"><img src="images/illust.png" alt="イラスト">イラスト</a>
     <a href="#"><img src="images/information.png" alt="インフォメーション">インフォメーション</a>
@@ -179,7 +179,7 @@
 
   <!-- 下部テキストリンク（小さめ） -->
   <div class="footer-links">
-    <a href="message">メッセージ</a>｜
+    <a href="message.html">メッセージ</a>｜
     <a href="#">写真</a>｜
     <a href="#">イラスト</a>｜
     <a href="#">インフォメーション</a>｜
