--- a/message.html
+++ b/message.html
@@ -137,9 +137,7 @@
     <h1 class="header-title">
       <a href="index.html">Kannkann企画</a> ＞ メッセージ
     </h1>
-    <button class="menu-btn" onclick="toggleMenu()">
-      <img src="images/menu.png" alt="メニュー">
-    </button>
+    <button class="menu-btn" onclick="toggleMenu()">☰</button>
   </div>
 
   <nav id="menu" class="side-menu">
