--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>メッセージ一覧</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="images/kann-favicon.png">
+  <link rel="icon" type="image/png" href="../../images/kann-favicon.png">
   <style>
     body {
       font-family: sans-serif;
@@ -43,8 +43,8 @@
     }
 
     .menu-btn img {
-      width: 28px;
-      height: 28px;
+      width: 32px;
+      height: 32px;
     }
 
     .side-menu {
@@ -135,17 +135,19 @@
 
   <div class="header">
     <h1 class="header-title">
-      <a href="index.html">Kannkann企画</a> ＞ メッセージ
+      <a href="../../index.html">Kannkann企画</a> ＞ メッセージ
     </h1>
-    <button class="menu-btn" onclick="toggleMenu()">☰</button>
+    <button class="menu-btn" onclick="toggleMenu()">
+      <img src="../../images/menu.png" alt="メニュー">
+    </button>
   </div>
 
   <nav id="menu" class="side-menu">
-    <a href="pages/message.html"><img src="images/message.png" alt="メッセージ">メッセージ一覧</a>
-    <a href="pages/photo.html"><img src="images/photo.png" alt="写真">写真</a>
-    <a href="pages/illust.html"><img src="images/illust.png" alt="イラスト">イラスト</a>
-    <a href="pages/info.html"><img src="images/information.png" alt="インフォ">インフォメーション</a>
-    <a href="index.html"><img src="images/home.png" alt="トップ">トップページ</a>
+    <a href="../message/"><img src="../../images/message.png" alt="メッセージ">メッセージ一覧</a>
+    <a href="../photo/"><img src="../../images/photo.png" alt="写真">写真</a>
+    <a href="../illust/"><img src="../../images/illust.png" alt="イラスト">イラスト</a>
+    <a href="../info/"><img src="../../images/information.png" alt="インフォ">インフォメーション</a>
+    <a href="../../index.html"><img src="../../images/home.png" alt="トップ">トップページ</a>
   </nav>
 
   <div class="container">
@@ -156,19 +158,19 @@
   </div>
 
   <div class="footer-links">
-    <a href="pages/message.html">メッセージ</a>
-    <a href="pages/photo.html">写真</a>
-    <a href="pages/illust.html">イラスト</a>
-    <a href="pages/info.html">インフォ</a>
-    <a href="index.html">TOP</a>
+    <a href="../message/">メッセージ</a>
+    <a href="../photo/">写真</a>
+    <a href="../illust/">イラスト</a>
+    <a href="../info/">インフォ</a>
+    <a href="../../index.html">TOP</a>
   </div>
 
   <div class="bottom-nav">
-    <a href="pages/message.html"><img src="images/message.png" alt="メッセージ"></a>
-    <a href="pages/photo.html"><img src="images/photo.png" alt="写真"></a>
-    <a href="pages/illust.html"><img src="images/illust.png" alt="イラスト"></a>
-    <a href="pages/info.html"><img src="images/information.png" alt="インフォ"></a>
-    <a href="index.html"><img src="images/home.png" alt="TOPに戻る"></a>
+    <a href="../message/"><img src="../../images/message.png" alt="メッセージ"></a>
+    <a href="../photo/"><img src="../../images/photo.png" alt="写真"></a>
+    <a href="../illust/"><img src="../../images/illust.png" alt="イラスト"></a>
+    <a href="../info/"><img src="../../images/information.png" alt="インフォ"></a>
+    <a href="../../index.html"><img src="../../images/home.png" alt="TOPに戻る"></a>
   </div>
 
   <script>
