--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -128,6 +128,11 @@
         width: 28px;
         height: 28px;
       }
+      /* ← 追加ここから */
+  .header-title {
+    font-size: 1.1rem;
+  }
+  /* ← 追加ここまで */
     }
   </style>
 </head>
