--- a/index.html
+++ b/index.html
@@ -26,17 +26,22 @@
     }
 
     .header a.logo {
-      font-size: 1.5rem;
+      font-size: 1.2rem; /* スマホ対策でやや小さめ */
       text-decoration: none;
       color: #333;
       font-weight: bold;
     }
 
     .menu-btn {
-      font-size: 1.5rem;
       background: none;
       border: none;
       cursor: pointer;
+      padding: 0;
+    }
+
+    .menu-btn img {
+      width: 28px;
+      height: 28px;
     }
 
     .side-menu {
@@ -158,7 +163,9 @@
 
   <div class="header">
     <a href="index.html" class="logo">Kannkann企画</a>
-    <button class="menu-btn" onclick="toggleMenu()">☰</button>
+    <button class="menu-btn" onclick="toggleMenu()">
+      <img src="images/menu.png" alt="メニュー">
+    </button>
   </div>
 
   <nav id="menu" class="side-menu">
@@ -177,7 +184,7 @@
     </div>
   </div>
 
-  <!-- 下部テキストリンク（小さめ） -->
+  <!-- 下部テキストリンク -->
   <div class="footer-links">
     <a href="message.html">メッセージ</a>｜
     <a href="#">写真</a>｜
@@ -188,7 +195,7 @@
 
   <!-- スマホ用ナビ -->
   <div class="bottom-nav">
-    <a href="message">
+    <a href="message.html">
       <img src="images/message.png" alt="メッセージ">
       メッセージ
     </a>
