--- a/index.html
+++ b/index.html
@@ -5,159 +5,7 @@
   <title>準備中</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="images/kann-favicon.png">
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      background-color: #f8f8f8;
-      color: #555;
-    }
-
-    .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: #fff;
-      padding: 10px 20px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    .header a.logo {
-      font-size: 1.2rem; /* スマホ対策でやや小さめ */
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-    }
-
-    .menu-btn {
-      background: none;
-      border: none;
-      cursor: pointer;
-      padding: 0;
-    }
-
-    .menu-btn img {
-      width: 28px;
-      height: 28px;
-    }
-
-    .side-menu {
-      position: fixed;
-      top: 0;
-      right: -300px;
-      width: 250px;
-      height: 100%;
-      background-color: #fff;
-      box-shadow: -2px 0 6px rgba(0,0,0,0.2);
-      padding: 60px 20px;
-      transition: right 0.3s ease;
-      z-index: 999;
-    }
-
-    .side-menu.open {
-      right: 0;
-    }
-
-    .side-menu a {
-      display: flex;
-      align-items: center;
-      margin: 15px 0;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-    }
-
-    .side-menu a img {
-      width: 24px;
-      height: 24px;
-      margin-right: 10px;
-    }
-
-    .container {
-      text-align: center;
-      padding: 40px 20px;
-    }
-
-    img.main-image {
-      max-width: 100%;
-      height: auto;
-      margin-top: 20px;
-    }
-
-    .main-text h2 {
-      font-size: 2rem;
-      margin-top: 40px;
-    }
-
-    .main-text p {
-      font-size: 1.2rem;
-      margin-top: 20px;
-    }
-
-    .bottom-nav {
-      display: none;
-    }
-
-    @media (max-width: 768px) {
-      .bottom-nav {
-        display: flex;
-        justify-content: space-around;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        background-color: #fff;
-        border-top: 1px solid #ccc;
-        z-index: 1000;
-      }
-
-      .bottom-nav a {
-        flex: 1;
-        padding: 10px 0;
-        text-align: center;
-        text-decoration: none;
-        color: #333;
-        font-size: 0.8rem;
-      }
-
-      .bottom-nav img {
-        display: block;
-        margin: 0 auto 5px;
-        width: 24px;
-        height: 24px;
-      }
-    }
-
-    .top-link {
-      text-align: center;
-      margin: 40px 0 10px;
-    }
-
-    .top-link a {
-      text-decoration: none;
-      background-color: #e0e0e0;
-      color: #333;
-      padding: 10px 20px;
-      border-radius: 8px;
-      font-weight: bold;
-      display: inline-block;
-    }
-
-    .footer-links {
-      text-align: center;
-      font-size: 0.8rem;
-      margin-bottom: 120px;
-    }
-
-    .footer-links a {
-      margin: 0 8px;
-      text-decoration: none;
-      color: #666;
-    }
-  </style>
+  <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
 
