--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </div>
 
   <nav id="menu" class="side-menu">
-    <a href="message.html"><img src="images/message.png" alt="メッセージ">メッセージ</a>
+    <a href="pages/message/index.html"><img src="images/message.png" alt="メッセージ">メッセージ</a>
     <a href="#"><img src="images/photo.png" alt="写真">写真</a>
     <a href="#"><img src="images/illust.png" alt="イラスト">イラスト</a>
     <a href="#"><img src="images/information.png" alt="インフォメーション">インフォメーション</a>
@@ -43,7 +43,7 @@
 
   <!-- スマホ用ナビ -->
   <div class="bottom-nav">
-    <a href="message.html">
+    <a href="pages/message/index.html">
       <img src="images/message.png" alt="メッセージ">
       メッセージ
     </a>
