--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -33,10 +33,10 @@
   </div>
 
   <div class="footer-links">
-    <a href="../message/">メッセージ</a>
-    <a href="../photo/">写真</a>
-    <a href="../illust/">イラスト</a>
-    <a href="../info/">インフォ</a>
+    <a href="../message/">メッセージ</a>|
+    <a href="../photo/">写真</a>|
+    <a href="../illust/">イラスト</a>|
+    <a href="../info/">インフォ</a>|
     <a href="../../index.html">TOP</a>
   </div>
 
