--- a/pages/message/index.html
+++ b/pages/message/index.html
@@ -10,8 +10,10 @@
 <body>
 
 <div class="header">
-  <a href="../../index.html" class="logo">Kannkann企画</a>
-  <span class="current-page">＞ メッセージ</span>
+  <div class="header-title">
+    <a href="../../index.html" class="logo">Kannkann企画</a>
+    <span class="current-page">＞ メッセージ</span>
+  </div>
   <button class="menu-btn" onclick="toggleMenu()">
     <img src="../../images/menu.png" alt="メニュー">
   </button>
