--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   </div>
 
   <nav id="menu" class="side-menu">
-    <a href="pages/message/index.html"><img src="images/message.png" alt="メッセージ">メッセージ</a>
-    <a href="#"><img src="images/photo.png" alt="写真">写真</a>
-    <a href="#"><img src="images/illust.png" alt="イラスト">イラスト</a>
-    <a href="#"><img src="images/information.png" alt="インフォメーション">インフォメーション</a>
+    <a href="pages/message/"><img src="images/message.png" alt="メッセージ">メッセージ</a>
+    <a href="pages/photo/"><img src="images/photo.png" alt="写真">写真</a>
+    <a href="pages/illust/"><img src="images/illust.png" alt="イラスト">イラスト</a>
+    <a href="pages/information/"><img src="images/information.png" alt="インフォメーション">インフォメーション</a>
     <a href="index.html"><img src="images/home.png" alt="ホーム">ホーム</a>
   </nav>
 
