--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
 
   <!-- 下部テキストリンク -->
   <div class="footer-links">
-    <a href="message.html">メッセージ</a>｜
-    <a href="#">写真</a>｜
-    <a href="#">イラスト</a>｜
-    <a href="#">インフォメーション</a>｜
+    <a href="pages/message/">メッセージ</a>｜
+    <a href="pages/photo/">写真</a>｜
+    <a href="pages/illust/">イラスト</a>｜
+    <a href="pages/information/">インフォメーション</a>｜
     <a href="index.html">TOP</a>
   </div>
 
   <!-- スマホ用ナビ -->
   <div class="bottom-nav">
-    <a href="pages/message/index.html">
+    <a href="pages/message/">
       <img src="images/message.png" alt="メッセージ">
       メッセージ
     </a>
-    <a href="#">
+    <a href="pages/photo/">
       <img src="images/photo.png" alt="写真">
       写真
     </a>
-    <a href="#">
+    <a href="pages/illust/">
       <img src="images/illust.png" alt="イラスト">
       イラスト
     </a>
-    <a href="#">
+    <a href="pages/information/">
       <img src="images/information.png" alt="インフォ">
       インフォ
     </a>
